<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yilu-counter</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to yilu-counter!</string>
    <string name="button_create">Create a new counter</string>
    <string name="button_counters">Existing counters</string>
    <string name="title_activity_create">CreateActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="please_enter_name">Please enter counter name</string>
    <string name="create">Create</string>
    <string name="exist">The name you entered already exist, please try a different name</string>
    <string name="title_activity_counter">CounterActivity</string>
    <string name="click">Click the button above to increment</string>
    <string name="reset">Reset</string>
    <string name="rename">Rename</string>
    <string name="stats">Summary</string>
    <string name="back">Return</string>
    <string name="warning">Please use the Return button</string>
    <string name="title_activity_rename">RenameActivity</string>
    <string name="enter_new_name">Please enter a new name</string>
    <string name="ok">OK</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="title_activity_counter_list">CounterListActivity</string>
    <string name="view_title">Existing ounters:</string>
    <string name="delete">Delete</string>

</resources>
